--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -6,6 +6,7 @@
     <item
         android:id="@+id/new_crime"
         android:title="@string/new_crime"
+        android:icon="@drawable/ic_menu_add"
         app:showAsAction="ifRoom|withText" />
 
 </menu>
