--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -18,14 +18,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/crime_photo"
+                android:id="@+id/crime_detail_photo"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="@android:color/darker_gray" />
             <ImageButton
-                android:id="@+id/crime_camera"
+                android:id="@+id/crime_detail_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_menu_camera"/>
@@ -41,13 +41,13 @@
                 style="?android:listSeparatorTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/crime_title_label" />
+                android:text="@string/crime_detail_title_label" />
 
             <EditText
                 android:id="@+id/crime_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/crime_title_hint" />
+                android:hint="@string/crime_detail_title_hint" />
         </LinearLayout>
     </LinearLayout>
 
@@ -56,30 +56,30 @@
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_details_label" />
+        android:text="@string/crime_detail_details_label" />
 
     <Button
-        android:id="@+id/crime_date"
+        android:id="@+id/crime_detail_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Wed Nov 14 11:56 EST 2019" />
 
     <CheckBox
-        android:id="@+id/crime_solved"
+        android:id="@+id/crime_detail_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_solved_label" />
+        android:text="@string/crime_detail_solved_label" />
 
     <Button
-        android:id="@+id/crime_choose_suspect"
+        android:id="@+id/crime_detail_choose_suspect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_suspect_text" />
+        android:text="@string/crime_detail_suspect_text" />
 
     <Button
-        android:id="@+id/crime_send_report"
+        android:id="@+id/crime_detail_send_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_report_text" />
+        android:text="@string/crime_detail_report_text" />
 
 </LinearLayout>
