Solved status content description

--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -70,6 +70,7 @@
         android:id="@+id/crime_detail_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:text="@string/crime_detail_solved_label" />
 
     <Button
