--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -1,88 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.bignerdranch.android.criminalintent.viewModel.CrimeViewModel" />
+    </data>
 
     <LinearLayout
+
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_height="match_parent"
+        android:layout_margin="16dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="16dp"
+            android:baselineAligned="false">
 
-            <ImageView
-                android:id="@+id/crime_detail_photo"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:scaleType="centerInside"
-                android:cropToPadding="true"
-                android:background="@android:color/darker_gray"
-                android:contentDescription="@string/crime_photo_no_image_description" />
-            <ImageButton
-                android:id="@+id/crime_detail_camera"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_menu_camera"
-                android:contentDescription="@string/crime_photo_button_description" />
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/crime_detail_photo"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:scaleType="centerInside"
+                    android:cropToPadding="true"
+                    android:background="@android:color/darker_gray"
+                    android:contentDescription="@string/crime_photo_no_image_description" />
+                <ImageButton
+                    android:id="@+id/crime_detail_camera"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_menu_camera"
+                    android:contentDescription="@string/crime_photo_button_description" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    style="?android:listSeparatorTextViewStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/crime_detail_title_label" />
+
+                <EditText
+                    android:id="@+id/crime_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/crime_detail_title_hint"
+                    android:text="@{viewModel.crime.title}"/>
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
+
+        <TextView
+            style="?android:listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:text="@string/crime_detail_details_label" />
 
-            <TextView
-                style="?android:listSeparatorTextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/crime_detail_title_label" />
+        <Button
+            android:id="@+id/crime_detail_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.dateString}" />
 
-            <EditText
-                android:id="@+id/crime_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/crime_detail_title_hint" />
-        </LinearLayout>
+        <CheckBox
+            android:id="@+id/crime_detail_solved"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:text="@string/crime_detail_solved_label"
+            android:checked="@{viewModel.crime.solved}"/>
+
+        <Button
+            android:id="@+id/crime_detail_choose_suspect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/crime_detail_suspect_text" />
+
+        <Button
+            android:id="@+id/crime_detail_send_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/crime_detail_report_text" />
+
     </LinearLayout>
-
-
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_detail_details_label" />
-
-    <Button
-        android:id="@+id/crime_detail_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Wed Nov 14 11:56 EST 2019" />
-
-    <CheckBox
-        android:id="@+id/crime_detail_solved"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="@string/crime_detail_solved_label" />
-
-    <Button
-        android:id="@+id/crime_detail_choose_suspect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_detail_suspect_text" />
-
-    <Button
-        android:id="@+id/crime_detail_send_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_detail_report_text" />
-
-</LinearLayout>
+</layout>
