--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -1,103 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<layout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:layout_margin="16dp">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.bignerdranch.android.criminalintent.viewModel.CrimeViewModel" />
-    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/crime_photos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        >
 
-    <LinearLayout
+        <ImageView
+            android:id="@+id/img_crime"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/btn_camera"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:baselineAligned="false">
+            android:src="@drawable/ic_baseline_camera_alt_24"
+            app:layout_constraintTop_toBottomOf="@id/img_crime"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/crime_detail_photo"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:scaleType="centerInside"
-                    android:cropToPadding="true"
-                    android:background="@android:color/darker_gray"
-                    android:contentDescription="@string/crime_photo_no_image_description" />
-                <ImageButton
-                    android:id="@+id/crime_detail_camera"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_menu_camera"
-                    android:contentDescription="@string/crime_photo_button_description" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    style="?android:listSeparatorTextViewStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/crime_detail_title_label" />
-
-                <EditText
-                    android:id="@+id/crime_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/crime_detail_title_hint"
-                    android:text="@{viewModel.crime.title}"/>
-            </LinearLayout>
-        </LinearLayout>
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/text_fields"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/crime_photos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/crime_photos"
+        >
 
         <TextView
+            android:id="@+id/lbl_crime_title"
             style="?android:listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_detail_details_label" />
+            android:text="@string/fragment_crime_textv_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/crime_detail_date"
+        <EditText
+            android:id="@+id/txt_crime_title"
+            style="?android:listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.dateString}" />
+            android:autofillHints="Enter the title of the crime"
+            android:inputType="text"
+            android:hint="@string/fragment_crime_edittext_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lbl_crime_title"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <CheckBox
-            android:id="@+id/crime_detail_solved"
+
+
+    <EditText
+        android:id="@+id/txt_crime_details"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints="Details of the crime"
+        android:inputType="text"
+        android:hint="@string/fragment_crime_edittext_details"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/crime_photos"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_crime_details"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/check_solved"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_date"
+        android:text="@string/fragment_crime_checkbox_solved"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lower_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/check_solved"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_suspect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
-            android:text="@string/crime_detail_solved_label"
-            android:checked="@{viewModel.crime.solved}"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
-        <Button
-            android:id="@+id/crime_detail_choose_suspect"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_report"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_detail_suspect_text" />
+            app:layout_constraintTop_toBottomOf="@id/btn_suspect"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/fragment_crime_report"
+            />
 
-        <Button
-            android:id="@+id/crime_detail_send_report"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/crime_detail_report_text" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-</layout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_crime_save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
